# rag-course-assistant

./: .gitignore  CLAUDE.md  pyproject.toml  run.sh
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_rag_system.py  test_search_tool.py
frontend/: index.html  script.js  style.css
